gcc/testsuite/rust/rustc/ui/nll/issue-52213_dg.rs
fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
    match (&t,) {
        ((u,),) => u,
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

fn main() {
    let x = {
        let y = Box::new((42,));
        transmute_lifetime(&y)
    };

    println!("{}", x);
}

